<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.condorserg.omdb.ui.searchMovies.SearchMoviesFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.condorserg.omdb.ui.dbmovies.DBMoviesFragment"
        android:label="@string/title_db_movies"
        tools:layout="@layout/fragment_db_movies" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.condorserg.omdb.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_extras"
        android:name="com.condorserg.omdb.ui.notifications.InfoFragment"
        android:label="Extras"
        tools:layout="@layout/fragment_notifications" />
</navigation>